--- a/index.html
+++ b/index.html
@@ -7,19 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <aside class="sidebar">
-        <div class="container">
-            <h3><a href="" class="sidebar-content">Dashboard</a></h3>
-            <h3><a href="" class="sidebar-content">Users</a></h3>
-            <h3><a href="" class="sidebar-content">History</a></h3>
-            <h3><a href="" class="sidebar-content">Analytics</a></h3>
-            <h3><a href="" class="sidebar-content">Tickets</a></h3>
-            <h3><a href="" class="sidebar-content">Sale List</a></h3>
-            <h3><a href="" class="sidebar-content">Reports</a></h3>
-            <h3><a href="" class="sidebar-content">Settings</a></h3>
-            <h3><a href="" class="sidebar-content">New Login</a></h3>
-            <h3><a href="" class="sidebar-content" class="sidebar-bottom">Logout</a></h3>
+    <div class="container">
+        <div class="icon">
+            <img src="astaicon.jpg" alt="">
         </div>
-    </aside>
+        <h1>Hugoowszz</h1>
+        <h3>Software Enginner</h3>
+    </div>
 </body>
 </html>
